@@ -612,11 +612,11 @@ int cmeWebServiceSetup (unsigned short port, int useSSL, const char *sslKeyFile,
         webServiceDaemon = MHD_start_daemon(MHD_USE_SELECT_INTERNALLY | MHD_USE_SSL,
                                             port,NULL,NULL,
                                             &cmeWebServiceAnswerConnection,NULL,
+                                            MHD_OPTION_NOTIFY_COMPLETED,&cmeWebServiceRequestCompleted,NULL,
                                             MHD_OPTION_HTTPS_MEM_KEY,key_pem,
                                             MHD_OPTION_HTTPS_MEM_CERT,cert_pem,
                                             MHD_OPTION_HTTPS_MEM_TRUST,ca_pem,    //root CA certificate = engine certificate; CA certifies organization, and organization certifies user.
-                                            MHD_OPTION_NOTIFY_COMPLETED,&cmeWebServiceRequestCompleted,
-                                            NULL,MHD_OPTION_END);
+                                            MHD_OPTION_END);
 
         if (NULL == webServiceDaemon) //Error
         {
@@ -634,8 +634,8 @@ int cmeWebServiceSetup (unsigned short port, int useSSL, const char *sslKeyFile,
         webServiceDaemon = MHD_start_daemon(MHD_USE_SELECT_INTERNALLY,
                                             port, NULL, NULL,
                                             &cmeWebServiceAnswerConnection,NULL,
-                                            MHD_OPTION_NOTIFY_COMPLETED,&cmeWebServiceRequestCompleted,
-                                            NULL,MHD_OPTION_END);
+                                            MHD_OPTION_NOTIFY_COMPLETED,&cmeWebServiceRequestCompleted,NULL,
+                                            MHD_OPTION_END);
         if (NULL == webServiceDaemon)
         {
 #ifdef ERROR_LOG
